@@ -287,7 +287,8 @@ setting is on, you are asked for confirmation before the modem is
 initialized.
 .TP 0.5i
 .B N
-Toggle whether each line is prefixed with current date and time.
+Toggle between three states, whether each line is prefixed with current date
+and time, a timestamp is added every second, or no timestamps.
 .TP 0.5i
 .B O
 Configure minicom. Puts you in the configuration menu.
