@@ -2,6 +2,9 @@
 
 	* src/minicom.c: Code consolidation.
 
+	* src/minicom.c, src/minicom.h, src/vt100.c, man/minicom.1: Make
+	  line timestamps three value: every line, every second, and off.
+
 2011-02-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* src/vt100.c: Cleanups: Delete everything that was in OLD blocks.
